--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html dir="rtl" lang="ar"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <script async="" src="./index_files/tag.js"></script><script src="./index_files/jquery.min.js"></script>
     <script src="./index_files/jquery.min(1).js"></script>
+    <script src="./index_files/dr-dtime.min.js"></script>
     <style>
       .ac_footer {
         position: relative;
@@ -27,7 +28,7 @@
     </style>
     <!--retarget-->
     <!--retarget-->
-    <script src="./index_files/9_12_14.min.js" type="text/javascript"></script>
+    <!-- <script src="./index_files/9_12_14.min.js" type="text/javascript"></script> -->
     <meta data-text-id="75785">
     
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" name="viewport">
@@ -80,7 +81,7 @@
       <main class="main">
         <div class="container">
           <div class="video" data-link="place=video">
-            <video autoplay="true" class="avid" controls="controls" id="video" muted="muted" poster="poster.jpg">
+            <video autoplay="true" class="avid" controls="controls" id="video" muted="muted" poster="./index_files/Screenshot_15.png">
               <source src="youthcream.mp4" type="video/mp4; codecs=" avc1.42e01e,="" mp4a.40.2""="">
             </video>
           </div>
